--- a/src/components/animation/Skills.css
+++ b/src/components/animation/Skills.css
@@ -45,10 +45,6 @@
     }
 }
 
-.tagcloud-wrapper:has(.tagcloud-rotation:hover)  {
-    --tagcloud-animation-play-state: paused;
-}
-
 .tagcloud-wrapper .tagcloud-tags {
     position: absolute;
     width: var(--_diameter);
@@ -66,10 +62,6 @@
     to {transform: translate(-50%, -50%) rotateX(360deg);}
 }
 
-.tagcloud-wrapper .tagcloud-tags:has(.tagcloud-tag div a:hover) .tagcloud-tag:not(:has(div a:hover)) {
-    opacity: 0.25;
-}
-
 .tagcloud-wrapper .tagcloud-tag {
     --_phi: calc(acos(-1 + (2 * var(--index)) / var(--num-elements)));
     --_theta: calc(sqrt(var(--num-elements) * var(--PI)) * var(--_phi));
@@ -77,8 +69,8 @@
     --_y: calc(sin(var(--_theta)) * sin(var(--_phi)));
     --_z: calc(cos(var(--_phi)));
     --_vector-length: calc(sqrt(
-        var(--_x) * var(--_x) + 
-        var(--_y) * var(--_y) + 
+        var(--_x) * var(--_x) +
+        var(--_y) * var(--_y) +
         var(--_z) * var(--_z)
     ));
     --_normalized-x: calc(var(--_x) / var(--_vector-length));
@@ -100,8 +92,8 @@
     position: absolute;
     transition: opacity var(--tagcloud-transition-duration) var(--tagcloud-transition-ease);
     transform: translate3d(var(--_final-x), var(--_final-y), var(--_final-z));
-    animation: tagcloud-tag-rotation var(--tagcloud-animation-duration) 
-               var(--tagcloud-animation-direction) linear infinite 
+    animation: tagcloud-tag-rotation var(--tagcloud-animation-duration)
+               var(--tagcloud-animation-direction) linear infinite
                var(--tagcloud-animation-play-state);
 }
 
@@ -128,6 +120,13 @@
                     -1px  1px 1px rgb(var(--tagcloud-bg-color-rgb)),
                     -1px -1px 1px rgb(var(--tagcloud-bg-color-rgb)),
                     0 0 1rem rgb(var(--tagcloud-bg-color-rgb));
+    transition: all 0.3s ease;
+    display: inline-block;
+}
+
+.tagcloud-wrapper .tagcloud-tag div a:hover {
+    color: #95bff8;
+    transform: scale(1.2);
 }
 
 .tagcloud-wrapper .tagcloud-controls {
@@ -147,7 +146,7 @@
     --_x: calc(var(--_control-radius) * cos(var(--_segment)));
     --_y: calc(var(--_control-radius) * sin(var(--_segment)) + var(--_control-radius) - var(--_height) / 2);
     --_rotation: calc(var(--index) / var(--num-elements) * 360deg);
-    
+
     position: absolute;
     left: var(--_x);
     top: var(--_y);
